--- a/templates/note/search.html.twig
+++ b/templates/note/search.html.twig
@@ -1,9 +1,9 @@
 {% extends 'layouts/base.html.twig' %}
 
-{% block title %}Explore{% endblock %}
+{% block title %}Search{% endblock %}
 
 {% block body %}
-    <h2 class="text-4xl text-center font-black">Explore</h2>
+    <h2 class="text-4xl text-center font-black">Search</h2>
 
     {% include 'components/note/collection.html.twig' with { } %}
 {% endblock %}
