--- a/templates/layouts/base.html.twig
+++ b/templates/layouts/base.html.twig
@@ -15,7 +15,7 @@
         <script src="https://cdn.tailwindcss.com"></script>
     </head>
 
-    <body class="h-screen bg-teal-100">
+    <body class="h-screen {% block backgroundColor %}bg-teal-100{% endblock %}">
         <div class="h-full gap-4 grid grid-rows-[auto_1fr]">
             {% include 'components/header.html.twig' %}
 
