--- a/templates/user/login.html.twig
+++ b/templates/user/login.html.twig
@@ -26,7 +26,7 @@
                     Submit
                 </button>
 
-                {% include 'components/link/nav-link.html.twig' with { 'path': path('app_register'), 'linkText': 'Sign up' } %}
+                {% include 'components/link.html.twig' with { 'path': path('app_register'), 'linkText': 'Sign up' } %}
             </div>
 
             {% if error %}
