--- a/templates/user/profile.html.twig
+++ b/templates/user/profile.html.twig
@@ -12,37 +12,21 @@
                     Titre Category
                 </h3>
 
-                <ul class="gap-2 flex flex-col">
+                <ul class="gap-y-4 flex flex-col">
                     <li>
-                        {% include 'components/note/note-thumbnail.html.twig' with { } %}
+                        {% include 'components/note/thumbnail.html.twig' with { } %}
                     </li>
 
                     <li>
-                        {% include 'components/note/note-thumbnail.html.twig' with { } %}
+                        {% include 'components/note/thumbnail.html.twig' with { } %}
                     </li>
 
                     <li>
-                        {% include 'components/note/note-thumbnail.html.twig' with { } %}
+                        {% include 'components/note/thumbnail.html.twig' with { } %}
                     </li>
 
                     <li>
-                        {% include 'components/note/note-thumbnail.html.twig' with { } %}
-                    </li>
-                </ul>
-            </li>
-
-            <li class="w-fit h-full p-2 shadow-lg shadow-emerald-700/50 bg-emerald-500 snap-start">
-                <h3 class="pb-4 text-2xl font-bold">
-                    Titre Category
-                </h3>
-
-                <ul class="gap-2 flex flex-col">
-                    <li>
-                        {% include 'components/note/note-thumbnail.html.twig' with { } %}
-                    </li>
-
-                    <li>
-                        {% include 'components/note/note-thumbnail.html.twig' with { } %}
+                        {% include 'components/note/thumbnail.html.twig' with { } %}
                     </li>
                 </ul>
             </li>
@@ -52,16 +36,36 @@
                     Titre Category
                 </h3>
 
-                <ul class="gap-2 flex flex-col">
+                <ul class="gap-y-4 flex flex-col">
                     <li>
-                        {% include 'components/note/note-thumbnail.html.twig' with { } %}
+                        {% include 'components/note/thumbnail.html.twig' with { } %}
                     </li>
 
                     <li>
-                        {% include 'components/note/note-thumbnail.html.twig' with { } %}
+                        {% include 'components/note/thumbnail.html.twig' with { } %}
                     </li>
                 </ul>
             </li>
+
+            <li class="w-fit h-full p-2 shadow-lg shadow-emerald-700/50 bg-emerald-500 snap-start">
+                <h3 class="pb-4 text-2xl font-bold">
+                    Titre Category
+                </h3>
+
+                <ul class="gap-y-4 flex flex-col">
+                    <li>
+                        {% include 'components/note/thumbnail.html.twig' with { } %}
+                    </li>
+
+                    <li>
+                        {% include 'components/note/thumbnail.html.twig' with { } %}
+                    </li>
+                </ul>
+            </li>
+
+            <div>
+                {% include 'components/button.html.twig' with { actionPath: path('app_profile'), buttonText: 'Add a category' } %}
+            </div>
         </ul>
     </div>
 {% endblock %}
