--- a/templates/components/note/text/category.html.twig
+++ b/templates/components/note/text/category.html.twig
@@ -1,9 +1,9 @@
 {% if isInCollection is defined and isInCollection %}
     <p class="w-fit font-medium text-teal-900 hover:scale-y-[1.15] transform transition-transform">
-        Test TODO (Category)
+        {{ category.getTitle() }} (Category)
     </p>
 {% else %}
     <p class="w-fit font-medium text-teal-900">
-        Test TODO (Category)
+        {{ category.getTitle() }} (Category)
     </p>
 {% endif %}
