--- a/templates/components/note/text/likes-count.html.twig
+++ b/templates/components/note/text/likes-count.html.twig
@@ -1,9 +1,9 @@
 {% if isInCollection is defined and isInCollection %}
     <p class="w-fit font-medium text-teal-900 hover:scale-y-[1.15] transform transition-transform">
-        800 likes
+        {{ likesCount }} likes
     </p>
 {% else %}
     <p class="w-fit font-medium text-teal-900">
-        800 likes
+        {{ likesCount }} likes
     </p>
 {% endif %}
