--- a/templates/components/form/textarea-control.html.twig
+++ b/templates/components/form/textarea-control.html.twig
@@ -4,9 +4,9 @@
     {% endif %}
 
     {% if formItemValue is defined %}
-        {{ form_widget(formItem, {'value': formItemValue, 'attr': {'class': 'w-[13em] px-1 text-2xl rounded-xl bg-teal-200 outline-2 focus:outline outline-teal-300'} }) }}
+        {{ form_widget(formItem, {'value': formItemValue, 'attr': {'class': 'w-[15em] px-1 text-2xl rounded-xl bg-teal-200 outline-2 focus:outline outline-teal-300'} }) }}
     {% else %}
-        {{ form_widget(formItem, {'attr': {'class': 'w-[13em] px-1 text-2xl rounded-xl bg-teal-200 outline-2 focus:outline outline-teal-300'} }) }}
+        {{ form_widget(formItem, {'attr': {'class': 'w-[15em] h-[10em] px-1 text-2xl rounded-xl bg-teal-200 outline-2 focus:outline outline-teal-300'} }) }}
     {% endif %}
 
     <small>{{ form_help(formItem) }}</small>
