--- a/templates/note/search.html.twig
+++ b/templates/note/search.html.twig
@@ -5,5 +5,31 @@
 {% block body %}
     <h2 class="text-4xl text-center font-black">Search</h2>
 
+    {{ form_start(noteSearchForm, {'attr': {'class': 'py-20 gap-10 flex flex-col items-center'} }) }}
+        <div class="gap-4 flex flex-col">
+            {% include 'components/form/text-control.html.twig' with { 'formItem': noteSearchForm.title, 'formItemLabel': 'Note title' } %}
+        </div>
+
+        <div class="gap-4 flex flex-col">
+            {% include 'components/form/text-control.html.twig' with { 'formItem': noteSearchForm.authorUsername, 'formItemLabel': 'Author' } %}
+        </div>
+
+        <div class="gap-4 flex flex-col items-center">
+            {% include 'components/form/choices-control.html.twig' with { 'formItem': noteSearchForm.tags, 'formItemLabel': 'Note tags' } %}
+        </div>
+
+        {% if is_granted('IS_AUTHENTICATED_FULLY') %}
+            <div class="gap-4 flex flex-col">
+                {% include 'components/form/checkbox-control.html.twig' with { 'formItem': noteSearchForm.onlyLikedByCurrentUser, 'formItemLabel': 'Only you liked' } %}
+            </div>
+        {% endif %}
+        
+        <div class="gap-4 flex items-center">
+            {% include 'components/form/submit.html.twig' with { 'formItem': noteSearchForm.submit, 'formItemLabel': 'Search' } %}
+        </div>
+        
+        {{ form_widget(noteSearchForm._token) }}
+    {{ form_end(noteSearchForm, { render_rest: false }) }}
+
     {% include 'components/note/collection.html.twig' with { } %}
 {% endblock %}
